--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
-*{
-  margin : 0;
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(45deg, #0a0a0a,#3a4452)
+
+
+
+}
+
+.
